--- a/templates/store/products/single.html
+++ b/templates/store/products/single.html
@@ -33,7 +33,9 @@
                                 </select>
 
                             </div>
-                            <div class="col-6 text-end"><button type="button" class="btn btn-secondary btn-sm">Pick that beauty</button></div>
+                            <div class="col-6 text-end">
+                            <button type="button" id="add-button" value="{{ product.id }}" class="btn btn-secondary btn-sm">Pick that beauty</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -42,4 +44,26 @@
     </main>
 
 </div>
+
+<script>
+
+    $(document).on('click', '.delete-button', function (e) {
+        e.preventDefault();
+        $.ajax({
+            type: 'POST',
+            url: '{% url "basket:basket_add" %}',
+            data: {
+                productid: $('#add-button').val(),
+                csfrmiddlewaretoken: "{{csrf_token}}",
+                action: 'post'
+            },
+            success: function (json) {
+
+            },
+            error: function (xhr, errmsg, err) {}
+        })
+    })
+
+</script>
+
 {% endblock %}
