--- a/templates/store/products/single.html
+++ b/templates/store/products/single.html
@@ -47,20 +47,23 @@
 
 <script>
 
-    $(document).on('click', '.delete-button', function (e) {
+    $(document).on('click', '#add-button', function (e) {
         e.preventDefault();
         $.ajax({
             type: 'POST',
             url: '{% url "basket:basket_add" %}',
             data: {
                 productid: $('#add-button').val(),
-                csfrmiddlewaretoken: "{{csrf_token}}",
+                productqty: $('#select option:selected').text(),
+                csfrmiddlewaretoken: '{{csrf_token}}',
                 action: 'post'
             },
             success: function (json) {
-
+                document.getElementById("basket-qty").innerHTML = json.qty
             },
-            error: function (xhr, errmsg, err) {}
+            error: function (xhr, errmsg, err) {
+
+            }
         })
     })
 
