--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -9,7 +9,7 @@
             <h1 class="h5">Shopping Basket</h1>
             {% for item in basket %}
             {%  with product=item.product %}
-            <div class="row mb-4 border">
+            <div data-index="{{ product.id }}" class="row mb-4 border product-item">
                 <div class="col-md-3 col-lg-2 order-md-first bg-light">
                     <img class="img-fluid mx-auto d-block" width="500px" alt="Responsive image" src="{{ product.image.url }}">
                 </div>
@@ -49,4 +49,53 @@
         </div>
         </div>
     </main>
+
+    <script>
+
+    $(document).on('click', '.delete-button', function (e) {
+        e.preventDefault();
+        var prodid = $(this).data('index');
+        $.ajax({
+            type: 'POST',
+            url: '{% url "basket:basket_delete" %}',
+            data: {
+                productid: $(this).data('index'),
+                csfrmiddlewaretoken: "{{csrf_token}}",
+                action: 'post'
+            },
+            success: function (json) {
+                $('.product-item[data-index="'+ prodid +'"]').remove();
+                document.getElementById("subtotal").innerHTML = json.subtotal;
+                document.getElementById("basket-qty").innerHTML = json.qty
+            },
+            error: function (xhr, errmsg, err) {
+
+            }
+        })
+    })
+
+    $(document).on('click', '.update-button', function (e) {
+        e.preventDefault();
+        var prodid = $(this).data('index');
+        $.ajax({
+            type: 'POST',
+            url: '{% url "basket:basket_update" %}',
+            data: {
+                productid: $(this).data('index'),
+                productqty: $('#select'+ prodid +' option:selected').text(),
+                csfrmiddlewaretoken: "{{csrf_token}}",
+                action: 'post'
+            },
+            success: function (json) {
+                document.getElementById("basket-qty").innerHTML = json.qty
+                document.getElementById("subtotal").innerHTML = json.subtotal
+            },
+            error: function (xhr, errmsg, err) {
+
+            }
+        })
+    })
+
+    </script>
+
 {% endblock %}
