--- a/templates/store/products/category.html
+++ b/templates/store/products/category.html
@@ -6,23 +6,40 @@
     <main>
         <div class="album py-5 bg-light">
             <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'store:product_all' %}">All</a></li>
+                    {% for crumb in breadcrumbs|slice:':-1' %}
+                        <li class="breadcrumb-item"><a href="{{ crumb.get_absolute_url }}">{{ crumb.name|title }}</a></li>
+                    {% endfor %}
+                    <li class="breadcrumb-item active" aria-current="page">{{ category.name|title }}</li>
+                </ol>
+            </nav>
             <div class="pb-3 h5">{{ category.name|title }}</div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
-                {% for product in products %}
-                <div class="col">
-                <div class="card shadow-sm">
-                    <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
-                    <div class="card-body">
-                    <p class="card-text">
-                        <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <small class="text-muted">{{ product.description }}</small>
+                {% if products %}
+                    {% for product in products %}
+                    <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
+                        <div class="card-body">
+                        <p class="card-text">
+                            <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <small class="text-muted">{{ product.summary }}</small>
+                        </div>
+                        </div>
                     </div>
                     </div>
-                </div>
-                </div>
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    <div class="col">
+                        <div class="alert alert-info" role="alert">
+                            No products available in this category yet.
+                        </div>
+                    </div>
+                {% endif %}
             </div>
             </div>
         </div>
